fix(ui): prevent sub-menu from being hidden when scrollbar appears

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1489,10 +1489,10 @@ html {
 .menu-column__list {
   margin-top: 19px;
 }
-.menu-column__item:hover .sub-menu {
+.menu-column__item--active .sub-menu {
   display: grid;
 }
-.menu-column__item:hover > .menu-column__link {
+.menu-column__item--active > .menu-column__link, .menu-column__item:hover > .menu-column__link {
   font-weight: 500;
   color: #0071dc;
 }
