--- a/scss/components/_dropdown.scss
+++ b/scss/components/_dropdown.scss
@@ -90,11 +90,11 @@
   }
 
   &__item {
-    &:hover .sub-menu {
+    &--active .sub-menu {
       display: grid;
     }
   }
-
+  &__item--active > &__link,
   &__item:hover > &__link {
     font-weight: 500;
     color: #0071dc;
